--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     
 
     <div class="image-block m-auto">
-        <img src="assets/images/quickswap.png" alt="Quickswap">
+        <a href="https://quickswap.hpage.com/"><img src="assets/images/quickswap.png" alt="Quickswap"></a>
         
     </div>
 </section>
